Reestruturado os arquivos para um novo modelo

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
 
-  <title>React App</title>
+  <title>Centro Holístico Vida Feliz</title>
 
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/5.5.4/firebase-app.js"></script>
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <noscript>Este site não funciona sem JavaScript seja legal e habilite :)</noscript>
   <div id="root"></div>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
