--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
+    <meta name="author" content="Lucas Souza Viegas" />
+    <title>Centro Holístico Vida Feliz</title>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
 
-    <title>Centro Holístico Vida Feliz</title>
-
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.5.4/firebase-app.js"></script>
+    <!-- <script defer src="/__/firebase/5.5.4/firebase-app.js"></script> -->
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.5.4/firebase-auth.js"></script>
+    <!-- <script defer src="/__/firebase/5.5.4/firebase-auth.js"></script>
     <script defer src="/__/firebase/5.5.4/firebase-database.js"></script>
     <script defer src="/__/firebase/5.5.4/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.5.4/firebase-storage.js"></script>
+    <script defer src="/__/firebase/5.5.4/firebase-storage.js"></script> -->
     <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-    <script>
+    <!-- <script defer src="/__/firebase/init.js"></script> -->
+    <!-- <script>
       document.addEventListener('DOMContentLoaded', function () {
         try {
           let app = firebase.app();
@@ -31,7 +31,7 @@
           document.getElementById('load').innerHTML = 'Error loading the cd, check the console.';
         }
       });
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -39,5 +39,13 @@
       Este site não funciona sem JavaScript seja legal e habilite :)
     </noscript>
     <div id="root"></div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.4.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
   </body>
 </html>
